[npm-release] Release 1.0.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ebarymi_test_project",
-  "version": "0.3.0-SNAPSHOT",
+  "version": "1.0.0",
   "license": "some",
   "angular-cli": {},
   "scripts": {
